fixes in export

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=".build/Mario Forever - Thunder Engine.exe"
+export_path=".build/Mario Worker Community Edition.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -26,6 +26,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
+shader_baker/enabled=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -39,9 +40,9 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
+application/company_name="Meteo Dream"
+application/product_name="Mario Worker: Community Edition PROTOTYPE"
+application/file_description="Level Editor for Mario Forever"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
